# ChangeLog for dev-python/cloud_sptheme
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Mar 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  11 Aug 2011; James Rowe <jnrowe@gmail.com> -cloud_sptheme-1.1.ebuild,
  cloud_sptheme-1.2.ebuild:
  Keyworded x86.

  11 Aug 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Keyworded amd64.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Keyworded amd64.

*cloud_sptheme-1.2 (12 Jul 2011)

  12 Jul 2011; James Rowe <jnrowe@gmail.com> +cloud_sptheme-1.2.ebuild:
  Version bump [433].

  25 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Whitespace fix.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Keyworded ~x86.

*cloud_sptheme-1.1 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +cloud_sptheme-1.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [400].
